chore: merge d2-prompt use en

--- a/prompts/document/d2-chart/v2.md
+++ b/prompts/document/d2-chart/v2.md
@@ -15,10 +15,40 @@ This chapter establishes the foundational rules for generating the structure and
 All generated diagrams must adhere to established best practices to ensure they are effective communication tools, not merely decorative images. The primary audience for these diagrams is software engineers who need to understand a system's architecture, data flow, or component interactions.
 
 #### Clarity and Conciseness
-Use clear, simple language for all labels. Text within shapes should be minimal. For extensive explanations, use the tooltip attribute or an accompanying Markdown text block. The goal is to reduce cognitive load and make the diagram's structure immediately apparent. Long labels should be manually broken with newline characters (`\n`) to ensure they render correctly and do not disrupt the layout.
+Use clear, simple language for all labels. Text within shapes should be minimal, ideally one to two words. Avoid lengthy descriptions in labels. For extensive explanations, use an accompanying Markdown text block. The goal is to reduce cognitive load and make the diagram's structure immediately apparent. Long labels should be manually broken with newline characters (`\n`) to ensure they render correctly and do not disrupt the layout.
+
+- **Bad Practice (Overly descriptive label):**
+  ```d2
+  "TokenService": {
+    label: "TokenService (Handles token storage & refresh)"
+    shape: class
+  }
+  ```
+- **Good Practice (Concise label):**
+  ```d2
+  "TokenService": {
+    label: "TokenService"
+    shape: class
+  }
+  ```
+
+- **Bad Practice (Verbose connection label):**
+  ```d2
+  "User Login" -> "Session Creation": "User submits login form with credentials"
+  ```
+- **Good Practice (Concise connection label):**
+  ```d2
+  "User Login" -> "Session Creation": "login"
+  ```
 
 #### Logical Flow and Organization
-The diagram's layout must represent a logical flow, whether of data, control, or time. The visual arrangement of elements should guide the reader's eye naturally through the process or structure being depicted. Lines should be straight and avoid crossing where possible to maintain readability.
+The diagram's layout must represent a logical flow, whether of data, control, or time. The visual arrangement of elements should guide the reader's eye naturally through the process or structure being depicted. For optimal readability on web pages, the overall layout direction should be set to `down`.
+
+```d2
+direction: down
+```
+
+Lines should be straight and avoid crossing where possible to maintain readability. All nodes within a single diagram must be interconnected to form a cohesive graph. If unrelated groups of nodes exist, they should be split into separate diagrams.
 
 #### Appropriate Diagram Type
 Based on the input description, select the most suitable diagram type. For interactions over time, a sequence diagram is appropriate. For static system structure, a component or class diagram should be used. For process flows, a flowchart-style diagram is best. D2 is specifically designed for documenting software and does not support general-purpose charts like mind maps or Gantt charts; these are considered bloat and must not be generated.
@@ -34,6 +64,20 @@ This section provides the precise and unambiguous definition of D2's fundamental
 
 - A shape is defined by its key. By default, the key also serves as the shape's label. Shape keys are case-insensitive. For example, `api_gateway` creates a rectangle shape with the label "api_gateway".
 - To assign a different, case-sensitive label, use a colon: `api_gateway: "API Gateway"`.
+- **Critical Rule**: Node IDs (keys) containing special characters (e.g., `@`, ` `, `/`) must be normalized by replacing these characters with a hyphen (`-`). The original name must then be assigned to the `label` attribute.
+  - **Bad Practice:**
+    ```d2
+    "@blocklet/js-sdk": {
+      shape: package
+    }
+    ```
+  - **Good Practice:**
+    ```d2
+    "blocklet-js-sdk": {
+      label: "@blocklet/js-sdk"
+      shape: package
+    }
+    ```
 - Labels containing reserved characters (e.g., `(`, `)`, `$`, `-`, `:`) or spaces must be enclosed in single or double quotes to prevent parsing errors. Example: `"user-service:v1"`.
 - Multiple shapes can be declared on a single line using a semicolon as a delimiter. Example: `service_a; service_b; service_c`.
 
@@ -57,9 +101,32 @@ Containers are used to group related shapes, representing subsystems or logical 
 - **Block Notation**: `aws: { ec2: "EC2 Instance"; s3: "S3 Bucket" }`
 - **Dot Notation**: `aws.ec2: "EC2 Instance"`. This is useful for defining shapes and connections in a single line.
 
-Containers can be nested to any depth to represent hierarchical systems.
+Containers can be nested to any depth to represent hierarchical systems. Connections between shapes residing in the same container should be defined within that container's block.
 
 Container labels can be assigned using shorthand (`gcloud: "Google Cloud" {}`) or the reserved label keyword (`gcloud: { label: "Google Cloud" }`).
+
+When a container has more than three child nodes, use `grid-columns` to limit the number of columns in a single row, preferably to 2 or at most 3, to improve readability. If a container has nested containers, it is recommended to use `grid-gap` (with a value greater than 100) to increase the spacing between them.
+
+- **Good Practice (Grid Layout):**
+  ```d2
+  "Instance": {
+    grid-columns: 2
+    "A": "A"
+    "B": "B"
+    "C": "C"
+    "D": "D"
+  }
+  ```
+
+- **Good Practice (Grid Gap for Nested Containers):**
+  ```d2
+  "SDK: @blocklet/js-sdk": {
+    shape: package
+    grid-columns: 1
+    grid-gap: 100
+    // ... nested containers
+  }
+  ```
 
 #### Text and Code Blocks
 
@@ -92,37 +159,8 @@ D2 provides special syntax for creating complex, structured diagram types common
 - Constraints (e.g., `primary_key`, `foreign_key`, `unique`) are defined in a nested block for the relevant column. Example: `users: { shape: sql_table; id: int { constraint: primary_key }; email: string { constraint: unique } }`.
 - Foreign key relationships are established by creating a standard connection from the foreign key column in one table to the primary key column in another. Example: `orders.user_id -> users.id`.
 
-### 1.4 Layout and Positioning
 
-The arrangement of elements is controlled by a layout engine. The choice of engine is a primary constraint that dictates which layout-related keywords are available and how the diagram is rendered. The engine must be selected first, and all subsequent code generation must respect its capabilities and limitations.
-
-#### Layout Engine Selection
-
-D2 offers three primary layout engines:
-
-- **dagre** (default): A fast, hierarchical engine based on the Graphviz DOT algorithm. Best for simple top-down or left-right flows.
-- **ELK**: A more mature and actively maintained hierarchical engine. It produces clean, orthogonal routes and has better support for containers than dagre.
-- **TALA**: A proprietary, orthogonal layout engine designed specifically for software architecture diagrams. It is not constrained to hierarchical layouts and can produce diagrams that resemble human-drawn whiteboard sketches. It has first-class support for containers and symmetry.
-
-The engine is specified within a vars block. Example: `vars: { d2-config: { layout-engine: elk } }`.
-
-**Decision Heuristic**: For simple flowcharts, dagre is sufficient. For complex software architecture diagrams with nested containers, elk is a strong choice. For non-hierarchical system diagrams where a more intuitive, grid-like layout is desired, tala should be used.
-
-#### Direction Control
-
-- The global layout direction can be set using the `direction` keyword at the top level of the script. Valid values are `up`, `down`, `left`, and `right`.
-- **Engine Limitation**: Setting direction on a per-container basis is an advanced feature supported only by the tala layout engine. This syntax must not be used with `dagre` or `elk`.
-
-#### Engine-Specific Keyword Support
-
-The validity of certain keywords is contingent on the selected layout engine. Generating code with an unsupported keyword will result in an error or an undesirable layout.
-
-- **near**: This keyword positions an object near a specified point. It can be set to a constant (e.g., `top-left`, `bottom-center`) for all engines. However, setting it to reference another object (e.g., `near: object_A`) is only supported by tala.
-- **top and left**: These keywords for locking an object's absolute position are exclusive to tala.
-- **Container width and height**: Explicitly setting the dimensions of a container is supported by elk.
-- **Dagre Connection Limitation**: The dagre engine does not support connections from an ancestor container to one of its descendants (e.g., a connection from aws to aws.ec2). Such connections must be avoided when using `dagre`.
-
-### 1.5 Strict Adherence to Predefined Keyword Values
+### 1.4 Strict Adherence to Predefined Keyword Values
 
 Many D2 keywords accept only a specific, predefined set of string values. These function like enumerations in a programming language. LLMs often make mistakes by generating plausible but invalid values for these keywords. To prevent this, the following rules are non-negotiable.
 
@@ -136,27 +174,19 @@ The `shape` attribute must be assigned one of the following values:
 |-------------|-------------|
 | `rectangle` | The default shape. A standard rectangle. |
 | `square` | A shape that maintains a 1:1 aspect ratio. |
-| `page` | A rectangle with a folded corner, representing a document. |
 | `parallelogram` | A parallelogram, often used for input/output operations. |
-| `document` | A shape with a wavy bottom, representing a printed document. |
 | `cylinder` | A cylinder, typically representing a database or data store. |
 | `queue` | A shape representing a message queue. |
-| `package` | A shape representing a software package or module. |
-| `step` | A shape with a notched side, used in process flows. |
-| `callout` | A speech bubble shape, used for annotations. |
-| `stored_data` | A data store symbol (two horizontal lines with a curved side). |
-| `person` | A stick-figure icon representing a user or actor. |
 | `diamond` | A diamond shape, often used for decisions in flowcharts. |
 | `oval` | An oval or ellipse, often used for start/end terminators. |
 | `circle` | A perfect circle, maintains a 1:1 aspect ratio. |
 | `hexagon` | A hexagon shape. |
-| `cloud` | A cloud shape, typically representing a network or the internet. |
 | `c4-person` | A more detailed person icon based on the C4 model. |
-| `text` | A shape with no border, for displaying standalone text. |
 | `image` | A shape for embedding images via the icon attribute. |
-| `sql_table` | A special shape for rendering database tables. |
-| `class` | A special shape for rendering UML class diagrams. |
 | `sequence_diagram` | A special container shape for rendering sequence diagrams. |
+
+- If person shape is needed, use `c4-person` replace `person`.
+- **Forbidden Attributes**: Do not use any other shape, like: `package`, `step`, `callout`, `stored_data`, `person`, `document`, `multiple_document`, `class`, `sql_table`. These shapes are either deprecated, not suitable for software diagrams, or have been replaced by more appropriate alternatives.
 
 #### Predefined Keyword Values (Master Reference)
 
@@ -171,15 +201,16 @@ This table centralizes all other keywords with a restricted set of valid values.
 | UML Visibility | `+` (public), `-` (private), `#` (protected) |
 | Arrowhead shape | `triangle`, `arrow`, `diamond`, `circle`, `box`, `cf-one`, `cf-one-required`, `cf-many`, `cf-many-required`, `cross`, `unfilled triangle` |
 
-### 1.6 Known Limitations and Error Handling
+### 1.5 Known Limitations and Error Handling
 
 To generate robust D2 code, be aware of the language's limitations and common sources of errors.
 
 - **Quoting and Escaping**: Always enclose keys or labels that are reserved D2 keywords in quotes. Example: `shape_A: { "label": "My Label" }`. If a string must contain a `#` character (which normally signifies a comment), it must be quoted.
 - **Non-ASCII Characters**: While D2 supports Unicode, care must be taken to use ASCII versions of special characters like the colon (`:`) for defining labels, as visually similar Unicode characters will not be parsed correctly.
-- **SVG Interactivity Limitations**: Interactive features like `link` and `tooltip` are rendered into the SVG. However, their functionality depends on the embedding context. If the final SVG is embedded in a webpage using a simple `<img>` tag, these interactive features will be disabled.
+- **Styling**: Use colors and styles (like `style.fill`) sparingly. Only apply them to represent specific states (e.g., success, warning, error), not for arbitrary decoration.
+- **Forbidden Attributes**: Do not use the `tooltip` attribute. Interactive features should be handled by accompanying text. Similarly, do not use `animate: true` for individual shapes or connections.
 
-## 1.7 Shape Usage Best Practices
+## 1.6 Shape Usage Best Practices
 
 Selecting the correct shape is crucial for conveying the intended meaning of a component at a glance. Use the following guidelines to choose the most appropriate shape for different elements in your software diagrams.
 
@@ -193,20 +224,35 @@ Selecting the correct shape is crucial for conveying the intended meaning of a c
 ### Data and Storage
 
 - **cylinder**: The standard shape for representing a database or data store
-- **stored_data**: An alternative shape for a data store
 - **queue**: Specifically used to represent a message queue
 
 ### Architectural Components
 
-- **cloud**: Represents a network, the internet, or a cloud provider's environment (e.g., AWS, GCP)
 - **hexagon**: Often used to highlight a key architectural component, such as an API Gateway or a load balancer
-- **package**: Represents a software package, module, or a collection of related code
 
 ### Actors and Documents
 
-- **person**: Represents a human user or an external actor interacting with the system
-- **page or document**: Used for physical or digital documents, files, or reports
+- **c4-person**: Represents a human user or an external actor interacting with the system. This shape should not have any text inside it.
+- **image**: Used for embedding logos or icons, especially when representing third-party services or well-known platforms. When using this shape, ensure the `icon` attribute points to a valid image URL.
+  The following logos are predefined for common services:
+  - "NFT Studio": `https://www.arcblock.io/image-bin/uploads/5542354d3d33e5fcd211562ee734da01.png?imageFilter=resize&w=100&f=webp`
+  - "AIGNE": `https://www.arcblock.io/image-bin/uploads/89a24f04c34eca94f26c9dd30aec44fc.png?imageFilter=resize&w=100&f=webp`
+  - "Aistro": `https://www.arcblock.io/image-bin/uploads/b83c22b9f92e4837c2e21bb6fb831f1a.png?imageFilter=resize&w=100&f=webp`
+
+  - "Blocklet Launcher": `https://www.arcblock.io/image-bin/uploads/6cb1e2aa568509e1a874bf7ae1666c26.svg`
+  - "Blocklet Store": `https://www.arcblock.io/image-bin/uploads/6db33268d4d1662c4e91eaee159c1312.png?imageFilter=resize&w=100&f=webp`
+  - "Web3 Kit": `https://www.arcblock.io/image-bin/uploads/f409e3bdc7a2b42ba8fba9bae286aeda.svg`
+  - "AI Kit": `https://www.arcblock.io/image-bin/uploads/9745710dce319d9bf117516ad5d1f811.svg`
+
+  - "Blocklet": `https://www.arcblock.io/image-bin/uploads/eb1cf5d60cd85c42362920c49e3768cb.svg`
+  - "Blocklet Server": `https://www.arcblock.io/image-bin/uploads/eb1cf5d60cd85c42362920c49e3768cb.svg`
+  - "DID Spaces": `https://www.arcblock.io/image-bin/uploads/fb3d25d6fcd3f35c5431782a35bef879.svg`
+
+  - "DID": `https://www.arcblock.io/image-bin/uploads/71eea946246150766324008427d2f63d.svg`
+  - "DID Wallet": `https://www.arcblock.io/image-bin/uploads/37198ddc4a0b9e91e5c1c821ab895a34.svg`
+  - "DID Connect": `https://www.arcblock.io/image-bin/uploads/71eea946246150766324008427d2f63d.svg`
+  - "DID Names": `https://www.arcblock.io/image-bin/uploads/db36f9832a99d4dccb21a30ff269bb22.svg`
 
 ### Specialized Diagram Types
 
-- **sql_table, class, sequence_diagram**: These are not general-purpose shapes. They are special containers that render specific, structured diagram types and must be used exclusively for that purpose.
+- **sequence_diagram**: These are not general-purpose shapes. They are special containers that render specific, structured diagram types and must be used exclusively for that purpose.
