chore: add best practice

--- a/prompts/document/d2-chart/v2.md
+++ b/prompts/document/d2-chart/v2.md
@@ -19,26 +19,37 @@ Use clear, simple language for all labels. Text within shapes should be minimal,
 
 - **Bad Practice (Overly descriptive label):**
   ```d2
-  "TokenService": {
+  TokenService: {
     label: "TokenService (Handles token storage & refresh)"
-    shape: class
   }
   ```
 - **Good Practice (Concise label):**
   ```d2
-  "TokenService": {
+  TokenService: {
     label: "TokenService"
-    shape: class
   }
   ```
 
 - **Bad Practice (Verbose connection label):**
   ```d2
-  "User Login" -> "Session Creation": "User submits login form with credentials"
+  User-Login -> Session-Creation: "User submits login form with credentials"
   ```
 - **Good Practice (Concise connection label):**
   ```d2
-  "User Login" -> "Session Creation": "login"
+  User-Login -> Session-Creation: "login"
+  ```
+
+- **Bad Practice (Manual line breaks):**
+  ```d2
+  "AuthService": {
+    label: "AuthService (Handles user authentication, profile management, privacy settings, and related actions)"
+  }
+  ```
+- **Good Practice (Manual line breaks):**
+  ```d2
+  "AuthService": {
+    label: "AuthService\n(Handles user authentication,\nprofile management, privacy settings,\nand related actions)"
+  }
   ```
 
 #### Logical Flow and Organization
@@ -68,14 +79,14 @@ This section provides the precise and unambiguous definition of D2's fundamental
   - **Bad Practice:**
     ```d2
     "@blocklet/js-sdk": {
-      shape: package
+      shape: rectangle
     }
     ```
   - **Good Practice:**
     ```d2
-    "blocklet-js-sdk": {
+    blocklet-js-sdk: {
       label: "@blocklet/js-sdk"
-      shape: package
+      shape: rectangle
     }
     ```
 - Labels containing reserved characters (e.g., `(`, `)`, `$`, `-`, `:`) or spaces must be enclosed in single or double quotes to prevent parsing errors. Example: `"user-service:v1"`.
@@ -109,19 +120,19 @@ When a container has more than three child nodes, use `grid-columns` to limit th
 
 - **Good Practice (Grid Layout):**
   ```d2
-  "Instance": {
+  Instance: {
     grid-columns: 2
-    "A": "A"
-    "B": "B"
-    "C": "C"
-    "D": "D"
+    A: "A"
+    B: "B"
+    C: "C"
+    D: "D"
   }
   ```
 
 - **Good Practice (Grid Gap for Nested Containers):**
   ```d2
-  "SDK: @blocklet/js-sdk": {
-    shape: package
+  SDK-blocklet-js-sdk: {
+    shape: rectangle
     grid-columns: 1
     grid-gap: 100
     // ... nested containers
@@ -209,30 +220,44 @@ To generate robust D2 code, be aware of the language's limitations and common so
 - **Non-ASCII Characters**: While D2 supports Unicode, care must be taken to use ASCII versions of special characters like the colon (`:`) for defining labels, as visually similar Unicode characters will not be parsed correctly.
 - **Styling**: Use colors and styles (like `style.fill`) sparingly. Only apply them to represent specific states (e.g., success, warning, error), not for arbitrary decoration.
 - **Forbidden Attributes**: Do not use the `tooltip` attribute. Interactive features should be handled by accompanying text. Similarly, do not use `animate: true` for individual shapes or connections.
+  - **Bad Practice:**
+    ```d2
+    "AuthService": {
+      label: "AuthService"
+      tooltip: "Manages user profiles, privacy, and authentication actions"
+      animate: true
+    }
+    ```
+  - **Good Practice:**
+    ```d2
+    "AuthService": {
+      label: "AuthService"
+    }
+    ```
 
-## 1.6 Shape Usage Best Practices
+### 1.6 Shape Usage Best Practices
 
 Selecting the correct shape is crucial for conveying the intended meaning of a component at a glance. Use the following guidelines to choose the most appropriate shape for different elements in your software diagrams.
 
-### General Purpose & Processes
+#### General Purpose & Processes
 
 - **rectangle**: The default shape, suitable for any general-purpose component, service, or action step
 - **oval**: Traditionally used to indicate the start or end points of a process or flowchart
 - **diamond**: Reserved for decision points in flowcharts, where a process diverges based on a condition
 - **parallelogram**: Represents data input or output operations
 
-### Data and Storage
+#### Data and Storage
 
 - **cylinder**: The standard shape for representing a database or data store
 - **queue**: Specifically used to represent a message queue
 
-### Architectural Components
+#### Architectural Components
 
 - **hexagon**: Often used to highlight a key architectural component, such as an API Gateway or a load balancer
 
-### Actors and Documents
+#### Actors and Documents
 
-- **c4-person**: Represents a human user or an external actor interacting with the system. This shape should not have any text inside it.
+- **c4-person**: Represents a human user or an external actor interacting with the system.
 - **image**: Used for embedding logos or icons, especially when representing third-party services or well-known platforms. When using this shape, ensure the `icon` attribute points to a valid image URL.
   The following logos are predefined for common services:
   - "NFT Studio": `https://www.arcblock.io/image-bin/uploads/5542354d3d33e5fcd211562ee734da01.png?imageFilter=resize&w=100&f=webp`
@@ -253,6 +278,406 @@ Selecting the correct shape is crucial for conveying the intended meaning of a c
   - "DID Connect": `https://www.arcblock.io/image-bin/uploads/71eea946246150766324008427d2f63d.svg`
   - "DID Names": `https://www.arcblock.io/image-bin/uploads/db36f9832a99d4dccb21a30ff269bb22.svg`
 
-### Specialized Diagram Types
+#### Specialized Diagram Types
 
 - **sequence_diagram**: These are not general-purpose shapes. They are special containers that render specific, structured diagram types and must be used exclusively for that purpose.
+
+## Chapter 2: Best Practices for real case
+
+#### connections between shapes
+
+Ensure that the shape names used in connections are accurate and match the actual node identifiers. When connecting shapes nested within containers, always use the full, qualified name (including all parent containers) to reference the target shape correctly.
+
+- **Bad Practice:**
+  ```d2
+  direction: down
+
+  User: { 
+    shape: c4-person 
+  }
+
+  App: {
+    label: "Your Blocklet Application"
+    shape: rectangle
+
+    Uploader-Component: {
+      label: "Uploader Component"
+      shape: rectangle
+    }
+
+    Backend-Server: {
+      label: "Backend Server"
+      shape: rectangle
+
+      Uploader-Server: {
+        label: "@blocklet/uploader-server"
+        shape: hexagon
+      }
+
+      DB: {
+        label: "Database"
+        shape: cylinder
+      }
+
+      Uploader-Server -> DB: "4. Save metadata"
+      DB -> Uploader-Server: "5. Return DB record"
+    }
+
+    User -> Uploader-Component: "1. Drop file"
+    Uploader-Component -> Backend-Server.Uploader-Server: "2. Upload file chunks (Tus)"
+    Backend-Server.Uploader-Server -> Backend-Server.Uploader-Server: "3. Trigger backend onUploadFinish"
+    Backend-Server.Uploader-Server -> Uploader-Component: "6. Send JSON response"
+    Uploader-Component -> Uploader-Component: "7. Trigger frontend onUploadFinish"
+    Uploader-Component -> User: "8. Update UI with file URL"
+  }
+  ```
+- **Good Practice:**
+  ```d2
+  direction: down
+
+  User: { 
+    shape: c4-person 
+  }
+
+  App: {
+    label: "Your Blocklet Application"
+    shape: rectangle
+
+    Uploader-Component: {
+      label: "Uploader Component"
+      shape: rectangle
+    }
+
+    Backend-Server: {
+      label: "Backend Server"
+      shape: rectangle
+
+      Uploader-Server: {
+        label: "@blocklet/uploader-server"
+        shape: hexagon
+      }
+
+      DB: {
+        label: "Database"
+        shape: cylinder
+      }
+
+      Uploader-Server -> DB: "4. Save metadata"
+      DB -> Uploader-Server: "5. Return DB record"
+    }
+
+    Uploader-Component -> Backend-Server.Uploader-Server: "2. Upload file chunks (Tus)"
+    Backend-Server.Uploader-Server -> Backend-Server.Uploader-Server: "3. Trigger backend onUploadFinish"
+    Backend-Server.Uploader-Server -> Uploader-Component: "6. Send JSON response"
+    Uploader-Component -> Uploader-Component: "7. Trigger frontend onUploadFinish"
+  }
+  User -> App.Uploader-Component: "1. Drop file"
+  App.Uploader-Component -> User: "8. Update UI with file URL"
+  ```
+
+> The `User` shape is outside the `App` container, so the connection must reference the full path `App.Uploader-Component`.
+
+#### shape name should not contain special characters or quotes
+- **Bad Practice:**
+  ```d2
+  direction: down
+
+  "@blocklet/app": {
+    label: "Your Blocklet Application"
+    shape: rectangle
+
+    "uploader-component": {
+      label: "<Uploader /> Component"
+      shape: rectangle
+
+      "uppy-ecosystem": {
+        label: "Uppy Ecosystem"
+        shape: rectangle
+
+        "uppy-core": {
+          label: "Uppy Core Instance"
+          shape: hexagon
+        }
+
+        "standard-plugins": {
+          label: "Standard Uppy Plugins"
+          shape: rectangle
+          "Dashboard": {}
+          "Tus": {}
+          "Webcam": {}
+          "Url": {}
+        }
+
+        "custom-plugins": {
+          label: "Custom Blocklet Plugins"
+          shape: rectangle
+          "AIImage": {}
+          "Resources": {}
+          "Uploaded": {}
+        }
+
+        "uppy-core" -> "standard-plugins"
+        "uppy-core" -> "custom-plugins"
+      }
+    }
+  }
+
+  "media-kit": {
+    label: "Media Kit Blocklet"
+    shape: cylinder
+  }
+
+  "@blocklet/app.uploader-component" <-> media-kit: "Provides Config & Plugins"
+  ```
+- **Good Practice:**
+  ```d2
+  direction: down
+
+  blocklet-app: {
+    label: "Your Blocklet Application"
+    shape: rectangle
+
+    uploader-component: {
+      label: "<Uploader /> Component"
+      shape: rectangle
+
+      uppy-ecosystem: {
+        label: "Uppy Ecosystem"
+        shape: rectangle
+
+        uppy-core: {
+          label: "Uppy Core Instance"
+          shape: hexagon
+        }
+
+        standard-plugins: {
+          label: "Standard Uppy Plugins"
+          shape: rectangle
+          Dashboard: {}
+          Tus: {}
+          Webcam: {}
+          Url: {}
+        }
+
+        custom-plugins: {
+          label: "Custom Blocklet Plugins"
+          shape: rectangle
+          AIImage: {}
+          Resources: {}
+          Uploaded: {}
+        }
+
+        uppy-core -> standard-plugins
+        uppy-core -> custom-plugins
+      }
+    }
+  }
+
+  media-kit: {
+    label: "Media Kit Blocklet"
+    shape: cylinder
+  }
+
+  blocklet-app.uploader-component <-> media-kit: "Provides Config & Plugins"
+  ```
+
+#### shape should not contain both label and remark
+- **Bad Practice:**
+  ```d2
+  uploader-trigger: {
+    label: "UploaderTrigger"
+    shape: rectangle
+    style.fill: "#e6f7ff"
+    "A wrapper to create a clickable element (e.g., a button) that opens the Uploader UI."
+  }
+  ```
+- **Good Practice:**
+  ```d2
+  uploader-trigger: {
+    label: "UploaderTrigger"
+    shape: rectangle
+    style.fill: "#e6f7ff"
+  }
+  ```
+
+#### Shorten long connections text
+- **Bad Practice:**
+  ```d2
+  direction: down
+
+  User: {
+    shape: c4-person
+  }
+
+  Frontend: {
+    label: "Frontend (Browser)"
+    shape: rectangle
+
+    Uploader-Component: {
+      label: "Uploader Component"
+      shape: rectangle
+    }
+  }
+
+  Backend: {
+    label: "Backend Server"
+    shape: rectangle
+
+    Companion-Middleware: {
+      label: "Companion Middleware\n(@blocklet/uploader-server)"
+      shape: hexagon
+    }
+
+    Local-Storage-Middleware: {
+      label: "Local Storage Middleware"
+      shape: rectangle
+    }
+  }
+
+  Remote-Source: {
+    label: "Remote Source\n(e.g., Unsplash, URL)"
+    shape: cylinder
+  }
+
+  User -> Frontend.Uploader-Component: "1. Selects remote file"
+  Frontend.Uploader-Component -> Backend.Companion-Middleware: "2. Request file from remote source via Companion URL"
+  Backend.Companion-Middleware -> Remote-Source: "3. Fetch file"
+  Remote-Source -> Backend.Companion-Middleware: "4. Stream file data"
+  Backend.Companion-Middleware -> Frontend.Uploader-Component: "5. Stream file back to browser"
+  Frontend.Uploader-Component -> Backend.Local-Storage-Middleware: "6. Upload file via Tus protocol"
+  ```
+- **Good Practice:**
+  ```d2
+  direction: down
+
+  User: {
+    shape: c4-person
+  }
+
+  Frontend: {
+    label: "Frontend (Browser)"
+    shape: rectangle
+
+    Uploader-Component: {
+      label: "Uploader Component"
+      shape: rectangle
+    }
+  }
+
+  Backend: {
+    label: "Backend Server"
+    shape: rectangle
+
+    Companion-Middleware: {
+      label: "Companion Middleware\n(@blocklet/uploader-server)"
+      shape: hexagon
+    }
+
+    Local-Storage-Middleware: {
+      label: "Local Storage Middleware"
+      shape: rectangle
+    }
+  }
+
+  Remote-Source: {
+    label: "Remote Source\n(e.g., Unsplash, URL)"
+    shape: cylinder
+  }
+
+  User -> Frontend.Uploader-Component: "1. Selects file"
+  Frontend.Uploader-Component -> Backend.Companion-Middleware: "2. Request file"
+  Backend.Companion-Middleware -> Remote-Source: "3. Fetch file"
+  Remote-Source -> Backend.Companion-Middleware: "4. Stream file data"
+  Backend.Companion-Middleware -> Frontend.Uploader-Component: "5. Back to browser"
+  Frontend.Uploader-Component -> Backend.Local-Storage-Middleware: "6. Upload file"
+  ```
+
+#### Remove unnecessary grid-columns
+- **Bad Practice:**
+  ```d2
+  direction: down
+
+  User: { 
+    shape: c4-person 
+  }
+
+  Checkout-Flow: {
+    label: "Checkout Flow"
+    shape: rectangle
+
+    Entry-Points: {
+      label: "User-Facing Components"
+      shape: rectangle
+      grid-columns: 2
+
+      CheckoutTable: {
+        label: "CheckoutTable"
+        "Renders pricing plans"
+      }
+
+      CheckoutDonate: {
+        label: "CheckoutDonate"
+        "Manages donation flow"
+      }
+    }
+
+    Core-Processor: {
+      label: "Core Payment Processor"
+      shape: rectangle
+
+      CheckoutForm: {
+        label: "CheckoutForm"
+        "Processes the final payment"
+      }
+    }
+
+    Entry-Points.CheckoutTable -> Core-Processor.CheckoutForm: "On plan selection"
+    Entry-Points.CheckoutDonate -> Core-Processor.CheckoutForm: "On donate action"
+  }
+
+  User -> Checkout-Flow.Entry-Points.CheckoutTable: "Selects a subscription"
+  User -> Checkout-Flow.Entry-Points.CheckoutDonate: "Makes a donation"
+  ```
+- **Good Practice:**
+  ```d2
+  direction: down
+
+  User: { 
+    shape: c4-person 
+  }
+
+  Checkout-Flow: {
+    label: "Checkout Flow"
+    shape: rectangle
+
+    Entry-Points: {
+      label: "User-Facing Components"
+      shape: rectangle
+
+      CheckoutTable: {
+        label: "CheckoutTable"
+      }
+
+      CheckoutDonate: {
+        label: "CheckoutDonate"
+      }
+    }
+
+    Core-Processor: {
+      label: "Core Payment Processor"
+      shape: rectangle
+
+      CheckoutForm: {
+        label: "CheckoutForm"
+      }
+    }
+
+    Entry-Points.CheckoutTable -> Core-Processor.CheckoutForm: "On plan selection"
+    Entry-Points.CheckoutDonate -> Core-Processor.CheckoutForm: "On donate action"
+  }
+
+  User -> Checkout-Flow.Entry-Points.CheckoutTable: "Selects a subscription"
+  User -> Checkout-Flow.Entry-Points.CheckoutDonate: "Makes a donation"
+  ```
+
+> Checkout-Flow.Entry-Points has only two child nodes, and `grid-columns` is set to `2`, so `grid-columns` is unnecessary.
