--- a/prompts/document/d2-chart/v2.md
+++ b/prompts/document/d2-chart/v2.md
@@ -286,6 +286,7 @@ Selecting the correct shape is crucial for conveying the intended meaning of a c
 
 #### connections between shapes
 
+Ensure all connections are defined at the root level of the diagram, not nested within containers. This maintains clarity and prevents layout issues.
 Ensure that the shape names used in connections are accurate and match the actual node identifiers. When connecting shapes nested within containers, always use the full, qualified name (including all parent containers) to reference the target shape correctly.
 
 - **Bad Practice:**
@@ -361,21 +362,20 @@ Ensure that the shape names used in connections are accurate and match the actua
         label: "Database"
         shape: cylinder
       }
-
-      Uploader-Server -> DB: "4. Save metadata"
-      DB -> Uploader-Server: "5. Return DB record"
     }
-
-    Uploader-Component -> Backend-Server.Uploader-Server: "2. Upload file chunks (Tus)"
-    Backend-Server.Uploader-Server -> Backend-Server.Uploader-Server: "3. Trigger backend onUploadFinish"
-    Backend-Server.Uploader-Server -> Uploader-Component: "6. Send JSON response"
-    Uploader-Component -> Uploader-Component: "7. Trigger frontend onUploadFinish"
   }
+
   User -> App.Uploader-Component: "1. Drop file"
-  App.Uploader-Component -> User: "8. Update UI with file URL"
+  App.Uploader-Component -> App.Backend-Server.Uploader-Server: "2. Upload file"
+  App.Backend-Server.Uploader-Server -> App.Backend-Server.Uploader-Server: "3. Backend onUploadFinish"
+  App.Backend-Server.Uploader-Server -> App.Backend-Server.DB: "4. Save metadata"
+  App.Backend-Server.DB -> App.Backend-Server.Uploader-Server: "5. Return DB record"
+  App.Backend-Server.Uploader-Server -> App.Uploader-Component: "6. Send JSON response"
+  App.Uploader-Component -> App.Uploader-Component: "7. Frontend onUploadFinish"
+  App.Uploader-Component -> User: "8. Update UI"
   ```
 
-> The `User` shape is outside the `App` container, so the connection must reference the full path `App.Uploader-Component`.
+> Move all connections to root, and the `User` shape is outside the `App` container, so the connection must reference the full path `App.Uploader-Component`.
 
 #### shape name should not contain special characters or quotes
 - **Bad Practice:**
@@ -466,9 +466,6 @@ Ensure that the shape names used in connections are accurate and match the actua
           Resources: {}
           Uploaded: {}
         }
-
-        uppy-core -> standard-plugins
-        uppy-core -> custom-plugins
       }
     }
   }
@@ -478,6 +475,8 @@ Ensure that the shape names used in connections are accurate and match the actua
     shape: cylinder
   }
 
+  blocklet-app.uploader-component.uppy-ecosystem.uppy-core -> blocklet-app.uploader-component.uppy-ecosystem.standard-plugins
+  blocklet-app.uploader-component.uppy-ecosystem.uppy-core -> blocklet-app.uploader-component.uppy-ecosystem.custom-plugins
   blocklet-app.uploader-component <-> media-kit: "Provides Config & Plugins"
   ```
 
@@ -630,7 +629,6 @@ Ensure that the shape names used in connections are accurate and match the actua
         "Processes the final payment"
       }
     }
-
     Entry-Points.CheckoutTable -> Core-Processor.CheckoutForm: "On plan selection"
     Entry-Points.CheckoutDonate -> Core-Processor.CheckoutForm: "On donate action"
   }
@@ -672,12 +670,153 @@ Ensure that the shape names used in connections are accurate and match the actua
       }
     }
 
-    Entry-Points.CheckoutTable -> Core-Processor.CheckoutForm: "On plan selection"
-    Entry-Points.CheckoutDonate -> Core-Processor.CheckoutForm: "On donate action"
   }
 
+  Checkout-Flow.Entry-Points.CheckoutTable -> Checkout-Flow.Core-Processor.CheckoutForm: "On plan selection"
+  Checkout-Flow.Entry-Points.CheckoutDonate -> Checkout-Flow.Core-Processor.CheckoutForm: "On donate action"
   User -> Checkout-Flow.Entry-Points.CheckoutTable: "Selects a subscription"
   User -> Checkout-Flow.Entry-Points.CheckoutDonate: "Makes a donation"
   ```
 
 > Checkout-Flow.Entry-Points has only two child nodes, and `grid-columns` is set to `2`, so `grid-columns` is unnecessary.
+
+#### ensure style properties are valid
+- **Bad Practice:**
+  ```d2
+  App: {
+    shape: rectangle
+    style: {
+      stroke: "#888"
+      "stroke-width": 2
+      dashed: true
+    }
+  }
+  ```
+- **Good Practice:**
+  ```d2
+  App: {
+    shape: rectangle
+    style: {
+      stroke: "#888"
+      stroke-width: 2
+      stroke-dash: 2
+    }
+  }
+  ```
+
+#### Sequence Diagram
+- **Bad Practice:**
+  ```d2
+  direction: down
+
+  User: { 
+    shape: c4-person 
+  }
+
+  App: {
+    label: "Your Application"
+    shape: rectangle
+
+    ResumeSubscription: {
+      label: "ResumeSubscription Component"
+    }
+  }
+
+  Payment-API: {
+    label: "Payment Backend API"
+    shape: rectangle
+  }
+
+  DID-Wallet: {
+    label: "DID Wallet"
+    shape: image
+    icon: "https://www.arcblock.io/image-bin/uploads/37198ddc4a0b9e91e5c1c821ab895a34.svg"
+  }
+
+  sequence: {
+    shape: sequence_diagram
+
+    User -> App.ResumeSubscription: "1. Triggers resume action"
+
+    App.ResumeSubscription -> Payment-API: "2. Fetch recovery info\n(GET /recover-info)"
+    Payment-API -> App.ResumeSubscription: "3. Return status (e.g., needStake: true)"
+
+    App.ResumeSubscription.t1 -> User: "4. Display confirmation dialog"
+    User -> App.ResumeSubscription.t1: "5. Clicks 'Confirm'"
+
+    alt: "If Re-Staking is Required" {
+      App.ResumeSubscription.t1 -> DID-Wallet: "6a. Open 're-stake' session"
+      User -> DID-Wallet: "7a. Approve in wallet"
+      DID-Wallet -> App.ResumeSubscription.t1: "8a. Send success callback"
+    }
+
+    alt: "If No Staking is Required" {
+      App.ResumeSubscription.t1 -> Payment-API: "6b. Call recover endpoint\n(PUT /recover)"
+      Payment-API -> App.ResumeSubscription.t1: "7b. Return success"
+    }
+
+    App.ResumeSubscription.t1 -> Payment-API: "9. Fetch updated subscription details"
+    Payment-API -> App.ResumeSubscription.t1: "10. Return latest subscription"
+    App.ResumeSubscription.t1 -> App.ResumeSubscription: "11. Call onResumed() & close dialog"
+  }
+
+  ```
+- **Good Practice:**
+  ```d2
+  shape: sequence_diagram
+
+  User -> App.ResumeSubscription: "1. Triggers resume action"
+
+  App.ResumeSubscription -> Payment-API: "2. Fetch recovery info\n(GET /recover-info)"
+  Payment-API -> App.ResumeSubscription: "3. Return status (e.g., needStake: true)"
+
+  App.ResumeSubscription.t1 -> User: "4. Display confirmation dialog"
+  User -> App.ResumeSubscription.t1: "5. Clicks 'Confirm'"
+
+  alt: "If Re-Staking is Required" {
+    App.ResumeSubscription.t1 -> DID-Wallet: "6a. Open 're-stake' session"
+    User -> DID-Wallet: "7a. Approve in wallet"
+    DID-Wallet -> App.ResumeSubscription.t1: "8a. Send success callback"
+  }
+
+  alt: "If No Staking is Required" {
+    App.ResumeSubscription.t1 -> Payment-API: "6b. Call recover endpoint\n(PUT /recover)"
+    Payment-API -> App.ResumeSubscription.t1: "7b. Return success"
+  }
+
+  App.ResumeSubscription.t1 -> Payment-API: "9. Fetch updated subscription details"
+  Payment-API -> App.ResumeSubscription.t1: "10. Return latest subscription"
+  App.ResumeSubscription.t1 -> App.ResumeSubscription: "11. Call onResumed() & close dialog"
+  ```
+
+> If using sequence diagram, remove all other shapes, and only keep the sequence diagram part.
+
+## Chapter 3: Official Best Practices
+
+##### Game State Sequence
+```d2
+shape: sequence_diagram
+
+User
+Session
+Lua
+
+User."Init"
+
+User.t1 -> Session.t1: "SetupFight()"
+Session.t1 -> Session.t1: "Create clean fight state"
+Session.t1 -> Lua: "Trigger OnPlayerTurn"
+User.t1 <- Session.t1
+
+User."Repeat"
+
+User.mid -> Session.mid: "PlayerCastHand() etc."
+Session.mid -> Lua: "Trigger OnDamage etc."
+User.mid <- Session.mid
+
+User.t2 -> Session.t2: "FinishPlayerTurn()"
+Session.t2 -> Lua: "Trigger OnTurn"
+Session.t2 -> Session.t2: "Update and remove status effects"
+Session.t2 -> Lua: "Trigger OnPlayerTurn"
+User.t2 <- Session.t2
+```
