chore: update products logo url

--- a/prompts/document/d2-chart/v2.md
+++ b/prompts/document/d2-chart/v2.md
@@ -260,12 +260,12 @@ Selecting the correct shape is crucial for conveying the intended meaning of a c
 - **c4-person**: Represents a human user or an external actor interacting with the system.
 - **image**: Used for embedding logos or icons, especially when representing third-party services or well-known platforms. When using this shape, ensure the `icon` attribute points to a valid image URL.
   The following logos are predefined for common services:
-  - "NFT Studio": `https://www.arcblock.io/image-bin/uploads/5542354d3d33e5fcd211562ee734da01.png?imageFilter=resize&w=100&f=webp`
-  - "AIGNE": `https://www.arcblock.io/image-bin/uploads/89a24f04c34eca94f26c9dd30aec44fc.png?imageFilter=resize&w=100&f=webp`
-  - "Aistro": `https://www.arcblock.io/image-bin/uploads/b83c22b9f92e4837c2e21bb6fb831f1a.png?imageFilter=resize&w=100&f=webp`
+  - "NFT Studio": `https://www.arcblock.io/image-bin/uploads/5542354d3d33e5fcd211562ee734da01.png`
+  - "AIGNE": `https://www.arcblock.io/image-bin/uploads/89a24f04c34eca94f26c9dd30aec44fc.png`
+  - "Aistro": `https://www.arcblock.io/image-bin/uploads/b83c22b9f92e4837c2e21bb6fb831f1a.png`
 
   - "Blocklet Launcher": `https://www.arcblock.io/image-bin/uploads/6cb1e2aa568509e1a874bf7ae1666c26.svg`
-  - "Blocklet Store": `https://www.arcblock.io/image-bin/uploads/6db33268d4d1662c4e91eaee159c1312.png?imageFilter=resize&w=100&f=webp`
+  - "Blocklet Store": `https://store.blocklet.dev/assets/z8ia29UsENBg6tLZUKi2HABj38Cw1LmHZocbQ/logo.png`
   - "Web3 Kit": `https://www.arcblock.io/image-bin/uploads/f409e3bdc7a2b42ba8fba9bae286aeda.svg`
   - "AI Kit": `https://www.arcblock.io/image-bin/uploads/9745710dce319d9bf117516ad5d1f811.svg`
 
@@ -820,3 +820,13 @@ Session.t2 -> Session.t2: "Update and remove status effects"
 Session.t2 -> Lua: "Trigger OnPlayerTurn"
 User.t2 <- Session.t2
 ```
+
+#### Avoid unexpected characters
+- **Bad Practice:**
+  ```d2
+  User -> CLI: "$ blocklet init"
+  ```
+- **Good Practice:**
+  ```d2
+  User -> CLI: "blocklet init"
+  ```
